--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,16 @@
+.app {
+  display: grid;
+  place-items: center;
+  /* center inside the container */
+  height: 100vh;
+  background-color: #dadbd3;
+}
 
+.app__body {
+  display: flex;
+  background-color: #ededed;
+  height: 90vh;
+  width: 90vw;
+  box-shadow: -1px 4px 20px -6px rgba(0,0,0,0.75);
 
+}
