--- a/src/Chat.css
+++ b/src/Chat.css
@@ -34,6 +34,10 @@
     overflow: scroll;
 }
 
+.chat__body::-webkit-scrollbar {
+    display: none;
+}
+
 .chat__message {
     position: relative;
     font-size: 16px;
@@ -59,4 +63,34 @@
 .chat__receiver {
     margin-left: auto;
     background-color: #dcf8c6;
+}
+
+.chat__footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 62px;
+    border-top: 1px solid lightgray;
+}
+
+.chat__footer > form {
+    flex: 1;
+    display: flex;
+}
+
+.chat__footer > form > input {
+    flex: 1;
+    border-radius: 30px;
+    outline-width: 0;
+    padding: 10px;
+    border: none;
+}
+
+.chat__footer > form > button {
+    display: none;
+}
+
+.chat__footer > .MuiSvgIcon-root {
+    padding: 10px;
+    color: gray;
 }
