--- a/src/SidebarChat.css
+++ b/src/SidebarChat.css
@@ -14,6 +14,11 @@
     margin-bottom: 8px;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .sidebarChat__info {
     margin-left: 15px;
 }
