--- a/src/SidebarChat.css
+++ b/src/SidebarChat.css
@@ -14,6 +14,11 @@
     margin-bottom: 8px;
 }
 
+.sidebarChat__info > p {
+    color:gray;
+}
+
+
 a {
     text-decoration: none;
     color: inherit;
